Fix hero background image not showing on mobile devices

--- a/eden-cosmetics/eden_styles.css
+++ b/eden-cosmetics/eden_styles.css
@@ -166,12 +166,12 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../image updated/Gemini_Generated_Image_qmcsf5qmcsf5qmcs.png');
+    /* 모바일 브라우저 인식을 위해 띄어쓰기를 %20으로 변경 */
+    background: url('../image%20updated/Gemini_Generated_Image_qmcsf5qmcsf5qmcs.png');
     background-size: cover;
     background-position: center bottom;
     filter: brightness(1.03);
     /* 대비 확보를 위해 아주 약간의 밝기만 적용 */
-    image-rendering: -webkit-optimize-contrast;
     z-index: 1;
 }
 
